--- a/index.html
+++ b/index.html
@@ -82,6 +82,8 @@
     <div id="orientation"></div>
     <script src="js/gamesnacks.js"></script>
     <script src="dist/bundle.js"></script>
+    <script src="js/analytics_ubg_v1_4.js"></script>
+    <script src="js/ubg235_client_v1_1.js"></script>
 </body>
 
 </html>
